k8s/sensors.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-clients
  namespace: snus
spec:
  replicas: 5
  selector:
    matchLabels:
      app: sensor-client
  template:
    metadata:
      labels:
        app: sensor-client
    spec:
      containers:
        - name: sensor-client
          image: snus-sensor-client:local
          imagePullPolicy: IfNotPresent
