k8s/services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion
  namespace: snus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion
  template:
    metadata:
      labels:
        app: ingestion
    spec:
      containers:
        - name: ingestion
          image: snus-ingestion:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ingestion
  namespace: snus
spec:
  selector:
    app: ingestion
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consensus
  namespace: snus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consensus
  template:
    metadata:
      labels:
        app: consensus
    spec:
      containers:
        - name: consensus
          image: snus-consensus:local
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: snus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: snus-notification:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: snus
spec:
  selector:
    app: notification
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting
  namespace: snus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting
  template:
    metadata:
      labels:
        app: reporting
    spec:
      containers:
        - name: reporting
          image: snus-reporting:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reporting
  namespace: snus
spec:
  selector:
    app: reporting
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress
  namespace: snus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress
  template:
    metadata:
      labels:
        app: ingress
    spec:
      containers:
        - name: ingress
          image: snus-ingress:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: snus
spec:
  selector:
    app: ingress
  ports:
    - name: http
      port: 8080
      targetPort: 8080
